fixed alignment of updates object

--- a/public/generator.css
+++ b/public/generator.css
@@ -1,5 +1,5 @@
 main {
-    justify-content: center;
+    justify-content: space-around;
     padding-top: 15px;
     padding-bottom: 5px;
   }
@@ -30,7 +30,7 @@ label {
   flex: 1;
   width: 100%;
   padding: 0.5em;
-  justify-content: left;
+  text-align: left;
 }
 
 #messages {
